--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-pwa": "^0.20.1"
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
@@ -42,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.40",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
